--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ ipython = "^8.13.2"
 mypy = "^1.3.0"
 types-beautifulsoup4 = "^4.12.0.5"
 
+[tool.poetry.scripts]
+ironbot = "ironbot.__main__:app"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
