--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,16 +14,16 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Topic :: Utilities",
-]
+    ]
 keywords = [
     "triathlon",
     "Ironamn",
     "Professional triathletes",
     "Professional triathlon races",
-]
+    ]
 packages = [
-    { include = "ironbot" },
-]
+     { include = "ironbot" },
+    ]
 
 [tool.poetry.scripts]
 ironbot = "ironbot.__main__:app"
@@ -47,6 +47,7 @@ pytest = "^7.3.1"
 pytest-black = "^0.3.12"
 pytest-mypy = "^0.10.3"
 types-beautifulsoup4 = "^4.12.0.5"
+pytest-watch = "^4.2.0"
 
 [tool.pytest.ini_options]
 addopts = "--black --mypy"
