--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "ironbot"
-version = "0.0.4"
+version = "0.0.5"
 description = "CLI to get information about Ironman professional races"
 authors = ["Eduardo Cuducos <4732915+cuducos@users.noreply.github.com>"]
 license = "GPLv3"
@@ -44,12 +44,13 @@ ghostscript = "^0.7"
 opencv-python = "^4.7.0.72"
 
 [tool.poetry.group.dev.dependencies]
+ipdb = "^0.13.13"
 ipython = "^8.13.2"
 pytest = "^7.3.1"
 pytest-black = "^0.3.12"
 pytest-mypy = "^0.10.3"
-types-beautifulsoup4 = "^4.12.0.5"
 pytest-watch = "^4.2.0"
+types-beautifulsoup4 = "^4.12.0.5"
 
 [tool.pytest.ini_options]
 addopts = "--black --mypy"
