--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,11 +49,12 @@ ipython = "^8.13.2"
 pytest = "^7.3.1"
 pytest-black = "^0.3.12"
 pytest-mypy = "^0.10.3"
+pytest-ruff = "^0.1"
 pytest-watch = "^4.2.0"
 types-beautifulsoup4 = "^4.12.0.5"
 
 [tool.pytest.ini_options]
-addopts = "--black --mypy"
+addopts = "--black --mypy --ruff"
 
 [build-system]
 requires = ["poetry-core"]
