--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ python = "^3.9"
 alembic = "^1.11.1"
 beautifulsoup4 = "^4.12.2"
 camelot-py = "^0.11.0"
+httpx = "^0.24.1"
 sqlalchemy = "^2.0.15"
 typer = "^0.9.0"
 
